@@ -1,8 +1,10 @@
 package org.heigit.ohsome.oshdb.rocksdb;
 
 import static com.google.common.collect.Streams.zip;
+import static java.util.Collections.emptyMap;
 import static java.util.Optional.ofNullable;
 import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toMap;
 import static org.heigit.ohsome.oshdb.rocksdb.RocksDBUtil.cfOptions;
 import static org.heigit.ohsome.oshdb.rocksdb.RocksDBUtil.idToKey;
@@ -21,7 +23,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import org.heigit.ohsome.oshdb.osm.OSMType;
 import org.heigit.ohsome.oshdb.store.OSHData;
 import org.rocksdb.BloomFilter;
@@ -61,7 +63,7 @@ public class EntityStore implements AutoCloseable {
 
     var cfDescriptors = cfOptions.entrySet().stream()
         .map(option -> new ColumnFamilyDescriptor(option.getKey(), option.getValue()))
-        .collect(Collectors.toList());
+        .toList();
     this.cfHandles = new ArrayList<>();
     try {
       db = RocksDB.open(dbOptions, path.toString(), cfDescriptors, cfHandles);
@@ -72,22 +74,35 @@ public class EntityStore implements AutoCloseable {
   }
 
   public Map<Long, OSHData> entities(Collection<Long> ids) throws RocksDBException {
+    System.out.println("fetch entities = " + ids);
     try (var opt = new ReadOptions()) {
       var cfsList = new ColumnFamilyHandle[ids.size()];
       Arrays.fill(cfsList, entityGridCFHandle());
       var keys = idsToKeys(ids, ids.size());
+      System.out.println("keys = " + keys.stream().map(Arrays::toString).collect(joining(",")));
       var gridIds = db.multiGetAsList(opt, Arrays.asList(cfsList), keys);
+
+      System.out.println("gridIds = " + gridIds.stream().map(it -> Optional.ofNullable(it).map(Arrays::toString).orElse("null")).collect(joining(",")));
 
       @SuppressWarnings("UnstableApiUsage")
       var gridEntityKeys = zip(gridIds.stream(), keys.stream(), this::gridEntityKey)
           .filter(key -> key.length != 0)
-          .collect(Collectors.toList());
+          .toList();
+      System.out.println("gridEntityKeys = " + gridEntityKeys.stream().map(it -> Optional.ofNullable(it).map(Arrays::toString).orElse("null")).collect(joining(",")));
 
-      var data = db.multiGetAsList(opt, gridEntityKeys);
+      if (gridEntityKeys.isEmpty()) {
+        return emptyMap();
+      }
+
+      cfsList = new ColumnFamilyHandle[gridEntityKeys.size()];
+      Arrays.fill(cfsList, gridEntityDataCFHandle());
+      var data = db.multiGetAsList(opt, Arrays.asList(cfsList), gridEntityKeys);
+      System.out.println("data = " + data.stream().map(it -> Optional.ofNullable(it).map(Arrays::toString).orElse("null")).collect(joining(",")));
       @SuppressWarnings("UnstableApiUsage")
       var entities = zip(gridEntityKeys.stream(), data.stream(), this::gridEntityToOSHData)
           .filter(Objects::nonNull)
           .collect(toMap(OSHData::getId, identity()));
+      System.out.println("entities = " + entities);
       return entities;
     }
   }
@@ -95,13 +110,14 @@ public class EntityStore implements AutoCloseable {
 
 
   public void update(List<OSHData> entities) throws RocksDBException {
+    System.out.println("update = " + entities);
     var opt = new ReadOptions();
     var cfsList = new ColumnFamilyHandle[entities.size()];
     Arrays.fill(cfsList, entityGridCFHandle());
     var keys = idsToKeys(Iterables.transform(entities, OSHData::getId), entities.size());
     var gridKeys = db.multiGetAsList(opt, Arrays.asList(cfsList), keys);
 
-    try (var wo = new WriteOptions().setDisableWAL(true);
+    try (var wo = new WriteOptions();
          var wb = new WriteBatch()) {
 
       var idx = 0;
@@ -113,8 +129,11 @@ public class EntityStore implements AutoCloseable {
         if (prevGridKey != null && !Arrays.equals(prevGridKey, gridKey)) {
           wb.delete(gridEntityDataCFHandle(), gridEntityKey(prevGridKey, key));
         }
+        System.out.println("put gridKey = " + Arrays.toString(gridKey));
         wb.put(entityGridCFHandle(), key, gridKey);
-        wb.put(gridEntityDataCFHandle(), gridEntityKey(gridKey, key), entity.getData());
+        var gridEntityKey = gridEntityKey(gridKey, key);
+        System.out.println("gridEntitykey = " + Arrays.toString(gridEntityKey));
+        wb.put(gridEntityDataCFHandle(), gridEntityKey, entity.getData());
         idx++;
       }
       db.write(wo, wb);
@@ -126,7 +145,7 @@ public class EntityStore implements AutoCloseable {
     var gridEntityKey = gridEntityKey(gridKey, KEY_ZERO);
     var nextGridEntityKey = gridEntityKey(idToKey(gridId+1), KEY_ZERO);
     try (var opts = new ReadOptions().setIterateUpperBound(new Slice(nextGridEntityKey));
-        var itr = db.newIterator(opts)) {
+        var itr = db.newIterator(gridEntityDataCFHandle(), opts)) {
       var list = new ArrayList<OSHData>();
       itr.seek(gridEntityKey);
       for (; itr.isValid(); itr.next()) {
@@ -150,6 +169,7 @@ public class EntityStore implements AutoCloseable {
 
   private byte[] gridEntityKey(byte[] gridId, byte[] entityId) {
     if (gridId == null) {
+      System.out.println("gridEntityKey null-" + Arrays.toString(entityId) +" = EMPTY");
       return EMPTY;
     }
     return ByteBuffer.allocate(Long.BYTES * 2).put(gridId).put(entityId).array();
